--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,11 @@
       border: 2px solid #ccc;
       border-radius: 6px;
     }
+	button{
+		padding:10px 20px;
+		background-color:teal;
+		color:white;
+		border:none;
+		font-weight:500;
+		margin-bottom:10px;
+	}
